Allow multiple protocol instances and other changes to low-level netty

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ Thumbs.db
 /ios/xcode/native/
 /ios/IOSLauncher.app
 /ios/IOSLauncher.app.dSYM
+/Server/src/main/java/gdx/lunar/matchmaking/
+/Server/src/main/java/gdx/lunar/redis/
