--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -7,9 +7,12 @@ version '1.0'
 
 repositories {
     mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://oss.sonatype.org/content/repositories/releases/" }
 }
 
 dependencies {
-    compile group: 'io.netty', name: 'netty-all', version: '4.1.48.Final'
-    compile project(":Protocol")
+    implementation group: 'io.netty', name: 'netty-all', version: '4.1.48.Final'
+    implementation "com.badlogicgames.ashley:ashley:1.7.3"
+    implementation project(":Protocol")
 }
