Default packets can now be extended and used properly.
Before when extending default packets all fields were private, meaning you couldn't actually modify or access the data within the packet. This has changed.

Server now has a proper connection provider for custom connections

Also added a test packet in example project

--- a/Protocol/build.gradle
+++ b/Protocol/build.gradle
@@ -11,4 +11,5 @@ repositories {
 
 dependencies {
     compile group: 'io.netty', name: 'netty-all', version: '4.1.48.Final'
+    implementation project(":core")
 }
