--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,10 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.ashley:ashley:$ashleyVersion"
-        compile group: 'io.netty', name: 'netty-all', version: '4.1.87.Final'
-        compile project(path: ':Protocol', configuration: 'default')
-        compile project(path: ':Entity', configuration: 'default')
+        api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+        api group: 'io.netty', name: 'netty-all', version: '4.1.87.Final'
+        api project(path: ':Protocol', configuration: 'default')
+        api project(path: ':Entity', configuration: 'default')
     }
 }
